# nas-video-editor

./: .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml
frontend/: index.html  login.html
frontend/css/: style.css
frontend/js/: app.js
src/: main.rs
