[package]
name = "nas-video-editor"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.8", features = ["macros"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tower-http = { version = "0.6", features = ["fs", "cors"] }
uuid = { version = "1", features = ["v4"] }
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"
chrono = "0.4"
regex = "1"
mime_guess = "2"
tracing = "0.1"
tracing-subscriber = "0.3"
async-stream = "0.3"

[profile.release]
opt-level = 2
strip = true
lto = "thin"
